refactor(WebApiExRateProvider): 예외 처리 및 HTTP 요청 로직 개선